<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#90000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#96000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#9C000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#A2000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#A8000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#AE000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#B4000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#BA000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#C0000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#C6000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#CC000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#D2000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#D8000000" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/thank_you_text"
            android:textColor="#55FF88"
            android:textSize="32sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_heading_text_view"
                style="@style/header"
                android:padding="8dp"
                android:text="@string/order_summary_header" />

            <TextView
                android:id="@+id/order_summary_text_view"
                style="@style/details_text"
                android:text="@string/order_summary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/email_order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:onClick="emailOrder"
                    android:text="@string/email_order_button" />

                <Button
                    android:id="@+id/new_customer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:onClick="newCustomer"
                    android:text="@string/next_order_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>